Revision history for {{$dist->name}}

{{$NEXT}}

0.99_03   2019-10-24 10:46:02 -0700
  - Documentation

0.99_02   2019-10-14 16:16:16 -0600
  - api = 1 is no longer experimental (gh#193)

0.99_01   2019-10-14 14:39:18 -0600
  - Convert documentation from api => 0 (implicit) to api => 1 (explicit)
  - Improved documentation (gh#181, gh#184)

0.98      2019-10-14 13:18:02 -0600
  - Production release identical to 0.97_05

0.97_05   2019-10-12 13:09:12 -0600
  - Fixed several memory leaks on some return types and complex type
    arguments (gh#190, gh#191)

0.97_04   2019-10-05 12:31:32 -0600
  - pointer is no longer an alias for opaque with api => 1 (gh#189)
  - Added several reserved words for the type parser when api => 1 (gh#189)

0.97_03   2019-09-25 18:03:13 -0600
  - FFI::Platypus::Record has a record_layout_1 function which
    uses api => 1 by default. (gh#187)

0.97_02   2019-09-20 04:03:59 -0600
  - FFI::Platypus::Record record_layout may now take FFI::Platypus
    constructor arguments as a array reference as the first argument
    (gh#185)

0.97_01   2019-09-18 20:56:59 -0600
  - Pre-compute cast functions when they are created to save time each time
    they are called (gh#178, #179)
  - sizeof and alignof can now be used as class methods (gh#183)

0.96      2019-08-19 18:33:58 -0400
  - Production release identical to 0.95_11

0.95_11   2019-08-19 09:41:56 -0400
  - Documentation fixes (hakonhagland++ gh#173)
  - Increased Perl::Critic criticism and associated fixes (gh#172)

0.95_10   2019-08-16 16:14:54 -0400
  - Detect bad forks.pm  (gh#170)

0.95_09   2019-08-15 10:37:41 -0400
  - Daignostic release

0.95_08   2019-08-14 09:18:10 -0400
  - Document constant interface (see FFI::Platypus::Constant) (gh#169)

0.95_07   2019-08-13 13:38:30 -0400
  - Minor tweak to bundle interface: do not create fbx.json file when
    running on-demand (gh#167)
  - Document bundle interface (see FFI::Platypus::Bundle) (gh#160, gh#168)
